# aligner

./: .gitignore  Cargo.toml  README.md  input.json
src/: align.rs  error.rs  main.rs  utils.rs
tests/data/: medium_large.json
