[package]
name = "aligner"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/PyEED/aligner"

[dependencies]
bio = "2.2.0"
clap = { version = "4.5.35", features = ["derive"] }
indicatif = { version = "0.17.11", features = ["rayon"] }
num_cpus = "1.16.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
strip = true
